--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <div class="panel panel-default">
           <div class="panel-heading">Player 1</div>
             <div class="panel-body">Score:<span id="player1Score"></span></div>
-            <button type="button" class="btn btn-warning">Roll</button>
-            <button type="button" class="btn btn-danger">Stop</button>
+            <button type="button" class="btn btn-warning" id="roll1">Roll</button>
+            <button type="button" class="btn btn-danger" id="stop1">Stop</button>
             <p>Current roll:<span class="current1Roll"></span></p>
             <p>Previous rolls:<span class="previous1Roll"></span></p>
+            <p>Current Score:<span class="current1Score"></span></p>
         </div>
       </div>
     <div class="col col-md-6">
@@ -32,6 +33,7 @@
         <button type="button" class="btn btn-danger">Stop</button>
         <p>Current roll:<span class="current2Roll"></span></p>
         <p>Previous rolls:<span class="previous2Roll"></span></p>
+        <p>Current Score:<span class="current2Score"></span></p>
       </div>
     </div>
   </div>
