--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <div class="panel panel-default">
           <div class="panel-heading">Player 1</div>
             <div class="panel-body">Score:<span id="player1Score"></span></div>
-            <button type="button" class="btn btn-warning" id="roll1">Roll</button>
-            <button type="button" class="btn btn-danger" id="stop1">Take Score</button>
+            <div id ="player1">
+              <button type="button" class="btn btn-warning" id="roll1">Roll</button>
+              <button type="button" class="btn btn-danger" id="stop1">Take Score</button>
+            </div>
             <p>Current roll:<span class="current1Roll"></span></p>
             <p>Previous rolls:<span class="previous1Roll"></span></p>
             <p>Current Score:<span class="current1Score"></span></p>
@@ -29,8 +31,10 @@
       <div class="panel panel-default">
         <div class="panel-heading">Player 2</div>
         <div class="panel-body">Score:<span id="player2Score"></span></div>
-        <button type="button" class="btn btn-warning" id="roll2">Roll</button>
-        <button type="button" class="btn btn-danger" id="stop2">Take Score</button>
+        <div id="player2">
+          <button type="button" class="btn btn-warning" id="roll2">Roll</button>
+          <button type="button" class="btn btn-danger" id="stop2">Take Score</button>
+        </div>
         <p>Current roll:<span class="current2Roll"></span></p>
         <p>Previous rolls:<span class="previous2Roll"></span></p>
         <p>Current Score:<span class="current2Score"></span></p>
