--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Pig Dice</h1>
+      <h2>Round <span class="round"></span></h2>
+      <p class="bonusRound">BONUS ROUND!</p>
     </div>
   <div class="row">
       <div class="col col-md-6">
